   
 - [2017-08-19] Fixed bug #64: CQP grammar accepts negative repetition counts in standard and TAB queries. While
   we did not receive any bug reports from users, negative counts and other invalid ranges such as {3,2} would
   result in unexpected behaviour, including segementation faults and memory overflow. Such issues are now
   captured by the query parser and report a syntax error. 

Enhancements:

 - [2014-06-18] Revised implementation of cl_lexhash class. Auto-growing is now based on fill rate statistic
   rather than empirical performance measurements, which simplifies the code quite a bit. Auto-grow parameters
   (fill rate limit and target value after expansion) are exposed to applications and have new default settings.
   Optimization: Hash keys are now embedded directly in entries rather than allocated as separate strings,
   which improves speed, memory overhead and cache locality by a small amount.

 - [2014-06-19] New class cl_ngram_hash (based on cl_lexhash) encapsulates part of the functionality of the
   cwb-scan-corpus tool, making it accessible to other applications.  The new class should be slightly more
   efficient and memory-friendly than the original code because it embeds n-grams directly in the hash entries.

 - [2015-06-19: v3.4.9] cwb-scan-corpus now uses cl_ngram_hash for counting, resulting in substantial performance
   improvement (both speed and memory footprint) in certain situations.

 - [2015-06-19: v3.4.9] Hash-based reimplementation of CQP's "group" command is much faster for frequency counts
   over large sets of distinct items (up to 150x speed-up in extreme cases) and supports grouped listing of
   frequencies (as the name of the command has always implied).
 
 - [2017-07-01: v3.4.12] MU queries are now documented in the CQP tutorial and have a consistent "filtering"
   semantics.
 
 - [2017-08-20: v3.4.12] Undocumented and unsupported TAB queries now work again. The matching algorithm has been